# media-bridge

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  config.yml  config_example.yaml  manifest.json  offscreen.html  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-config.yml  tsconfig.json  vite.config.ts  webpack.config.js
.github/: release-please-config.json
.github/workflows/: build-release.yml  release-please.yml  rename-pr-title.yml
media_bridge/: __init__.py  config.py  core.py  downloader.py  error_handler.py  schemas.py  state_manager.py  status.py
media_bridge/integrations/: __init__.py  base.py  factory.py  google_drive.py  google_photos.py
public/: shared.css
public/ffmpeg/: ffmpeg-worker.js
public/ffmpeg/core/: ffmpeg-core.js
public/ffmpeg/ffmpeg/: empty.mjs
public/ffmpeg/util/: index.js
public/icons/: README.md
src/: __init__.py  background.ts  cli.py  content.ts  downloader.py  offscreen.ts  schemas.py  service-worker.ts
src/background/: hls-detector.ts  offscreen-merger-client.ts  service-worker.ts
src/content/: content-script.ts
src/content/detection/: detection-manager.ts
src/core/: types.ts
src/core/cloud/: base-cloud-provider.ts  google-auth.ts  google-drive.ts  s3-client.ts  upload-manager.ts
src/core/database/: chunks.ts  connection.ts  downloads.ts
src/core/detection/: detection-manager.ts  format-detector.ts  thumbnail-utils.ts
src/core/downloader/: base-playlist-handler.ts  base-recording-handler.ts  concurrent-workers.ts  crypto-utils.ts  download-manager.ts  format-detector.ts  header-rules.ts  types.ts
src/core/ffmpeg/: ffmpeg-bridge.ts  ffmpeg-singleton.ts  offscreen-manager.ts
src/core/metadata/: metadata-extractor.ts
src/core/parsers/: m3u8-parser.ts  mpd-parser.ts
src/core/storage/: chrome-storage.ts  download-state.ts  indexeddb-chunks.ts  indexeddb-downloads.ts  secure-storage.ts  settings.ts
src/core/types/: index.ts  parser.d.ts
src/core/utils/: blob-utils.ts  cancellation.ts  crypto-utils.ts  download-utils.ts  drm-utils.ts  errors.ts  fetch-utils.ts  ffmpeg-bridge.ts  ffmpeg-singleton.ts  file-utils.ts  format-utils.ts  header-rules.ts  id-utils.ts  logger.ts  m3u8-parser.ts  mpd-parser.ts  offscreen-manager.ts  playlist-utils.ts  thumbnail-utils.ts  url-utils.ts
src/ffmpeg/ffmpeg/: classes.js  const.js  errors.js  types.js  utils.js  worker.js
src/ffmpeg/util/: const.js  errors.js
src/lib/: types.ts
src/lib/cloud/: google-auth.ts  upload-manager.ts
src/lib/downloader/: dash-downloader.ts  direct-downloader.ts  download-manager.ts  format-detector.ts  hls-downloader.ts  segment-downloader.ts
src/offscreen/: offscreen.html  offscreen.ts
src/options/: constants.ts  options.html  options.ts
src/popup/: download-actions.ts  popup.html  popup.ts  render-downloads.ts  render-manifest.ts  render-videos.ts  state.ts  tabs.ts  utils.ts
src/shared/: constants.ts  messages.ts
src/types/: mpd-parser.d.ts
src/utils/: helpers.py
tests/: __init__.py  conftest.py  test_downloader.py  test_error_handler.py  test_google_drive.py  test_status.py
(+30 files in other folders)
