[tool.poetry]
name = "media-bridge"
version = "1.1.0"
description = "Python CLI that use yt-dlp to download videos and upload them to cloud"
authors = ["Jvillegasd <johnnyvillegaslrs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2025.2.19"
pydantic = "^2.10.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
